# FileTypeFetcher

./: .pre-commit-config.yaml  README.md  pyproject.toml
cmoncrawl-fetcher/: cmoncrawl_fetcher.py  commands.py  web.py
filetypefetcher/: commands.py  download.py  filetype_config.json  ftf.py  web.py
ftf/: commands.py  download.py
src/: cmoncrawl_fetcher.py  commands.py  config.py  filetype_config.json  ftf.py  web.py
